crates/toml/tests/snapshots/invalid/float/leading-point.stderr
TOML parse error at line 1, column 17
  |
1 | leading-point = .12345
  |                 ^
invalid mantissa, expected digits
